undoing testing change

--- a/Effect of Transmission Type on MPG.Rmd
+++ b/Effect of Transmission Type on MPG.Rmd
@@ -4,7 +4,7 @@ output: html_document
 ---
 /***************************************************************
 DRAFT
-  See model selection section- test change
+  See model selection section
 ****************************************************************/
 
 ```{r setup, include=FALSE}
